<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.camera.CameraFragment">

    <FrameLayout
        android:id="@+id/surfaceContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/desc_camera_preview"
        android:keepScreenOn="true"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@tools:sample/avatars">

        <!-- GLRecorderSurfaceView will be placed here by code -->

    </FrameLayout>

    <FrameLayout
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/scrimBackground"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout">

        <!-- Parent used for scrim -->
        <com.google.android.material.progressindicator.CircularProgressIndicator
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:indicatorColor="?attr/colorAccent"
            app:indicatorSize="48dp" />

    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/noFaceBanner"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".8"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="@dimen/keyline_4"
        app:contentPadding="@dimen/keyline_2"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/bannerIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/keyline_4"
                android:contentDescription="@string/desc_helper_icon"
                android:src="@drawable/ic_warning"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bannerText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/orange_500" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bannerText"
                style="@style/TextAppearance.MyTheme.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/keyline_4"
                android:text="@string/face_hint"
                app:layout_constraintBottom_toBottomOf="@id/bannerIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bannerIcon"
                app:layout_constraintTop_toTopOf="@id/bannerIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.slider.Slider
            android:id="@+id/cameraScale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/keyline_6"
            android:layout_marginStart="@dimen/keyline_6"
            android:valueFrom="0.5f"
            android:valueTo="1.5f"
            android:value="1.0"
            app:layout_constraintTop_toTopOf="parent"/>

        <FrameLayout
            android:id="@+id/cameraModeContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_4"
            android:layout_marginEnd="@dimen/keyline_4"
            android:layout_marginTop="@dimen/keyline_2"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:background="@drawable/track"
            app:layout_constraintEnd_toStartOf="@id/cameraButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cameraScale"
            app:layout_constraintWidth_max="150dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyTheme.Round"
                android:id="@+id/cameraModeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:maxLines="1"
                android:contentDescription="@string/desc_mode_button"
                android:ellipsize="end"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_gravity="start"
                android:text="@string/photo"
                app:icon="@drawable/ic_photo" />

        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/keyline_4"
            android:layout_marginTop="@dimen/keyline_2"
            android:contentDescription="@string/desc_camera_button"
            android:src="@drawable/ic_lens"
            app:fabCustomSize="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cameraScale"
            app:tint="?attr/colorOnPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cameraSelectorButton"
            style="@style/Widget.MaterialComponents.Button"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.MyTheme.Round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:layout_marginTop="@dimen/keyline_2"
            android:layout_marginStart="@dimen/keyline_4"
            android:layout_marginEnd="@dimen/keyline_2"
            app:iconPadding="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:contentDescription="@string/desc_camera_switch_button"
            android:enabled="false"
            tools:visibility="visible"
            android:visibility="gone"
            app:icon="@drawable/ic_camera_front"
            app:layout_constraintEnd_toStartOf="@+id/maskSelectorButton"
            app:layout_constraintStart_toEndOf="@+id/cameraButton"
            app:layout_constraintTop_toBottomOf="@id/cameraScale"
            tools:enabled="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/maskSelectorButton"
            style="@style/Widget.MaterialComponents.Button"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.MyTheme.Round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:layout_marginEnd="@dimen/keyline_4"
            android:layout_marginTop="@dimen/keyline_2"
            app:iconPadding="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:contentDescription="@string/desc_mask_button"
            app:icon="@drawable/ic_head"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cameraScale"
            app:layout_constraintStart_toEndOf="@id/cameraSelectorButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/maskSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="parent"
        tools:listitem="@layout/item_mask" />

</androidx.constraintlayout.widget.ConstraintLayout>